--- a/templates/formsubmit.html
+++ b/templates/formsubmit.html
@@ -6,7 +6,7 @@
     <div class="container wow fadeInUp delay-03s">
       <div class="row">
         <div class="logo text-center">
-          <h2>The RoarinPenguin Info Updater</h2>
+          <h2>The Info Updater</h2>
         </div>
 
         <div id="countdown" data-wow-delay=".3s" data-date="Jul 28, 2021 08:00:00"></div>
